City data fetched from json server

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+button Link>.active {
+    @apply text-white font-bold;
+}
+
+.active button {
+    @apply text-blue-700 font-bold;
+}
+
+.link>.active {
+    @apply font-bold bg-dark-1 rounded-lg ;
 }
