--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,59 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Define custom color variables */
+:root {
+    --color-brand-1: #ffb545;
+    --color-brand-2: #00c46a;
+    --color-dark-0: #242a2e;
+    --color-dark-1: #2d3439;
+    --color-dark-2: #42484d;
+    --color-light-1: #aaa;
+    --color-light-2: #ececec;
+    --color-light-3: #d6dee0;
+}
 
-
-button Link>.active {
+/* Style for active links within buttons */
+button .active {
     @apply text-white font-bold;
 }
 
-.active button {
+/* Style for active buttons */
+button.active {
     @apply text-blue-700 font-bold;
 }
 
-.link>.active {
+/* Style for active links within elements with the class 'link' */
+.link .active {
     @apply font-bold bg-dark-1 rounded-lg;
+}
+
+/* Custom styles for Leaflet popups and map elements */
+/* Custom styles for Leaflet popups and map elements */
+.leaflet-popup .leaflet-popup-content-wrapper {
+    background-color: var(--color-dark-1);
+    color: var(--color-light-2);
+    border-radius: 5px;
+    padding-right: 0.1rem;
+}
+
+.leaflet-popup .leaflet-popup-content {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+
+.leaflet-popup .leaflet-popup-content span:first-child {
+    font-size: 1rem;
+    line-height: 1;
+}
+
+.leaflet-popup .leaflet-popup-tip {
+    background-color: var(--color-dark-1);
+}
+
+.leaflet-popup-content-wrapper {
+    border-left: 5px solid var(--color-brand-2);
+
 }
